--- a/app/views/donation_mailer/donation_email.html.erb
+++ b/app/views/donation_mailer/donation_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to education-elevation, <%= @user.first_name %></h1>
+    <h1>Welcome to Education Elevation, <%= @user.first_name %></h1>
     <p>
       Thank you for your recent donation to the <%= @user.donations.last.program.name %> program. You have donated $<%= @user.donations_sum %> and are a part of our <%= @user.donor_tier %> donor tier.<br>
       Thank you for your support. 
